# thegoalcpp

./: .gitignore  CMakeLists.txt  README.md
include/: Shader.hpp
resources/shaders/: fragment.glsl  transvertex.glsl  vertex.glsl
src/: CMakeLists.txt  Shader.cpp  main.cpp
